fix/EP-4379-2